# OMFG

./: LICENSE  README.md
binary/: Cargo.toml  THIRD_PARTY_LICENCES
binary/src/: cli.rs  main.rs  struct_diff.rs  utils.rs
binary/src/cli/: local.rs  remote.rs  responses.rs
binary/src/struct_diff/: diff.rs  divider.rs  range_vec.rs  structure.rs
