[package]
name = "omfg-cli-tool"
version = "0.1.0"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]

[dependencies]
reqwest = { version="0.11.7", features = ["blocking", "multipart", "json"] }
indoc = "1.0"
diff = "0.1.12"
slice-diff-patch = "1.2.1"
regex = "1.5"
rayon = "1.5.1"
itertools = "0.10.3"
derive_more = "0.99.17"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
crc32fast = "1.3.2"
zip = "0.5.13"
anyhow = "1.0.55"
thiserror = "1.0.30"
short-crypt = "1.0.25"
mac_address = "1.1.3"
webbrowser = "0.6.0"
